Bug 1229429 - Refresh plugin window state during composition if we detect a change of layer trees. Fixes issues with plugin window visibility during rapid tab switching. r=roc

MozReview-Commit-ID: pVnTksTt2d